slideshow h3 padding fixed on mobile

--- a/template/templates/warwickTownship/sass/layout.scss
+++ b/template/templates/warwickTownship/sass/layout.scss
@@ -21,7 +21,7 @@
 	font-weight: bold;
 	width: 100%;
 	border-top: 1px solid #fff;
-	padding: 0 0 12px 0;
+	padding: 0 0 9px 0;
 	background: url("../images/bg_menuShadow.png") bottom center no-repeat;
 	z-index: 3;
 
